<resources>
    <string name="app_name">Projecte final</string>
    <string name="buttonAC">AC</string>
    <string name="button7">7</string>
    <string name="button4">4</string>
    <string name="button1">1</string>
    <string name="buttonANS">ANS</string>
    <string name="buttondiv">÷</string>
    <string name="button8">8</string>
    <string name="button5">5</string>
    <string name="button2">2</string>
    <string name="button0">0</string>
    <string name="buttonmult">*</string>
    <string name="button9">9</string>
    <string name="button6">6</string>
    <string name="button3">3</string>
    <string name="buttoncoma">.</string>
    <string name="buttonresta">-</string>
    <string name="buttonsuma">+</string>
    <string name="buttonigual">=</string>
    <string name="buit"></string>
    <string name="buttonborra">←</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="calculadora">Calculadora</string>
    <string name="menu">Escull una opcio casper</string>
    <string name="memory">Memory</string>
    <string name="activity3">Reproductor</string>
    <string name="Titol_menu">Ei que pasa xavaleh</string>
    <string name="Subtitol_menu">Todo bien todo correcto</string>
    <string name="diventre0">\nEm quedaré aqui per recordar-te lo tonto que ets per haver dividit entre 0, i resa perquè ningú més llegeixi aquesta notificació i es rigui de la teva inutilitat jajajajajajajajajajajajajajajajajajajajajajajajajajajajaja\n\n</string>
    <string name="mode_notificaci">Mode Notificació</string>
    <string name="toast">Toast</string>
    <string name="estat">Estat</string>
    <string name="trucar">trucar</string>
    <string name="obrir_navegador">Obrir navegador</string>
    <string name="delm1">delM1</string>
    <string name="addm1">addM1</string>
    <string name="addm2">addm2</string>
    <string name="delm2">delm2</string>
    <string name="delmem">delmem</string>
    <string name="m1">m1</string>
    <string name="m2">m2</string>
    <string name="pi">π</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="addm3">addm3</string>
    <string name="delm3">delm3</string>
    <string name="m3">m3</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="noEsticRegistrat">Not a member? Sign up now.</string>
    <string name="name">name</string>
    <string name="register">REGISTER</string>
    <string name="jaEsticRegistrat">Already registred! Login Me.</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="logout">logout</string>
    <string name="moviments">moviments:</string>
    <string name="reinicia_el_joc">reinicia el joc</string>
    <string name="tornar_al_login">tornar al login</string>
    <string name="ranking">Ranking</string>
    <string name="borrar_dades">borrar dades</string>
    <string name="esborra_dades">ESBORRA DADES</string>
    <string name="pause">pause</string>
    <string name="play">Play</string>
    <string name="hola_benvingut_a_la_meva_aplicaci_fes_click_a_dalt_a_la_esquerra_per_a_veure_les_funcions_o_a_dalt_a_la_dreta_per_marxar">Hola, benvingut a la meva aplicació fes click a dalt a la esquerra per a veure les funcions :) o a dalt a la dreta per marxar :(</string>
</resources>
