<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/aux1"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="50sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"/>

    <TextView
        android:id="@+id/aux2"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="50sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"/>

    <TextView
        android:id="@+id/aux3"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="50sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"/>

    <TextView
        android:id="@+id/texto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="50sp"
        android:layout_weight="3"/>

    <TextView
        android:id="@+id/result"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="50sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonAC"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/buttonAC"
                android:textColor="@color/Red" />

            <Button
                android:id="@+id/button7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/button7" />

            <Button
                android:id="@+id/button4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/button4" />

            <Button
                android:id="@+id/button1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/button1" />

            <Button
                android:id="@+id/buttonmodul"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/buttonmodul" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonborra"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="←" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/button8" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/button5" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/button2" />

            <Button
                android:id="@+id/button0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/button0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttondiv"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/buttondiv" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/button9" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/button6" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/button3" />

            <Button
                android:id="@+id/buttoncoma"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/buttoncoma"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonmult"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/buttonmult" />

            <Button
                android:id="@+id/buttonresta"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/buttonresta" />

            <Button
                android:id="@+id/buttonsuma"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/notbuttonigual"
                android:textSize="20sp"
                android:text="@string/buttonsuma" />



            <Button
                android:id="@+id/buttonigual"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/buttonigual"
                android:textSize="20sp"
                android:text="@string/buttonigual" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>